Revise project details in Projects.html add second project
Updated project descriptions and added a new project.

--- a/Projects.html
+++ b/Projects.html
@@ -46,10 +46,8 @@
         </div>
 
         <div class="card">
-          <h3>E-Commerce Website</h3>
-          <p>Processing...</p>
-          <p>...</p>
-          <p>...</p>
+          <h3>Daily Expense Tracker (LIVE)</h3>
+          <p>Developed a responsive Daily Expense Tracker using HTML, CSS, and JavaScript with localStorage for data persistence.</p>
         </div>
 
         <div class="card">
@@ -83,5 +81,6 @@
   <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
+
 
 </html>
