Revise project details in index.html  add second project in index
Updated project descriptions and links in the portfolio.

--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
           </article>
 
           <article class="project-card">
-            <h4>E-Commerce Website</h4>
-            <p>Processing...</p>
-            <p>...</p>
-            <a href="#" class="card-btn">View</a>
+            <h4>Daily Expense Tracker (LIVE)</h4>
+            <p>Developed a responsive Daily Expense Tracker using HTML, CSS, and JavaScript with localStorage for data persistence.</p>
+            <a href="https://ravi1210ravi1210.github.io/expense-tracker/" class="card-btn">View</a>
           </article>
 
           <article class="project-card">
@@ -111,5 +110,6 @@
   <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
+
 
 </html>
