Revise project previews in index.html  add 3rd project in index
Updated project details in the portfolio section, including a new project for a travel website.

--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
           </article>
 
           <article class="project-card">
-            <h4>Myntra || Clone</h4>
-            <p>Processing...</p>
-            <p>...</p>
-            <a href="#" class="card-btn">View</a>
+            <h4>Voyage Travel Website</h4>
+            <p>A responsive travel website designed using HTML and CSS to display travel destinations, packages, and services.</p>
+            <a href="https://ravi1210ravi1210.github.io/Voyage-Travel/" class="card-btn">View</a>
           </article>
 
           <article class="project-card">
@@ -113,3 +112,4 @@
 
 
 </html>
+
