Revise Projects.html with new project entries add 3rd project in project
Updated project details and added new project links.

--- a/Projects.html
+++ b/Projects.html
@@ -50,11 +50,9 @@
           <p>Developed a responsive Daily Expense Tracker using HTML, CSS, and JavaScript with localStorage for data persistence.</p>
         </div>
 
-        <div class="card">
-          <h3>Myntra || Clone</h3>
-          <p>Processing...</p>
-          <p>...</p>
-          <p>...</p>
+        <div class="card"><a href="https://ravi1210ravi1210.github.io/Voyage-Travel/">
+          <h3>Voyage Travel Website</h3>
+            <p>A responsive travel website designed using HTML and CSS to display travel destinations, packages, and services.</p>
         </div>
 
         <div class="card">
@@ -84,4 +82,5 @@
 
 
 </html>
+
 
